--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <head>
-  <title>Changing font colors</title>
-  <link rel="stylesheet" type="text/css" href="css/main.css"    
+  <title>Changing font colors</title> 	
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="css/main.css">    
 </head>
 
 <body>
